@@ -1,4 +1,7 @@
 1.3.28
+Partial config code rewrite. Shouldn't change anything, but let me know if anything seems broken.
+Added: Configs to restrict bonus regen by player health. For example, you could set players to only regen up to a certain number of hearts. Or not regen below a certain number if you're feeling evil.
+Fixed: Blight death messages being broken (does not completely translate however, working on it)
 Fixed: Blight fires spawning infinitely in some cases
 
 1.3.27
